--- a/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
+++ b/src/app/bmx/bmx-creator/participants-email/participants-email.component.html
@@ -5,7 +5,7 @@
         <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
 
             <div>
-                <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
+                <div style="margin: 23px 20px;font-size: 20px;color:#063074;font-weight: 800;">Email Settings</div>
                 <div style="line-height: 1; margin-left: 40px;font-size: 15px;
                 color:grey;font-weight: 100;width: 300px;display: flex;flex-direction: row; justify-content: space-between;margin-bottom: 10px;">Send Director Confirmation
                     Emails
