--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -114,7 +114,7 @@
                     {{'Project Information'}}
                 </div>
             </div>
-            <div [ngClass]="(isMenuActive9)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive9')">
+            <!-- <div [ngClass]="(isMenuActive9)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive9')">
                 <div style=" display: flex;flex-direction: column;align-items: flex-start;">
                     <div
                         style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
@@ -128,7 +128,7 @@
                     style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
                     {{'Image Uploader'}}
                 </div>
-            </div>
+            </div> -->
             <div [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
                 <div
                     style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
