--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -1,3 +1,30 @@
+
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+<div *ngIf="bmxClientPageOverview">
+    <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above" style=" margin: -20px 29px;" *ngIf="i === selectedIndex"
+    mat-icon-button>
+    <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
+</button>
+<button (click)="selectedIndex = i" class="add-column" matTooltip="settings" matTooltipPosition="above" style=" margin: -20px 29px;" *ngIf="i !== selectedIndex"
+mat-icon-button>
+<mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
+</button>
+<button (click)="insertNewColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="Add column"
+matTooltipPosition="above" mat-icon-button aria-label="ranking">
+<mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
+</button>
+<!-- <button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="Add column"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <mat-icon style="font-size: 26px;" class="full-icon">next_plan</mat-icon>
+</button> -->
+<button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 95px;" matTooltip="row settings"
+matTooltipPosition="above" mat-icon-button aria-label="ranking">
+<mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
+</button>
+</div>
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+
+
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
     <div style="text-align: center;">
@@ -17,15 +44,15 @@
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
             <br>
 
-            <div>
+            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
                 5 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
                 10 <br>
-                <label for="volume">{{rankingScaleValue}}</label>
             </div>
+            <label for="volume">{{rankingScaleValue}}</label>
             <hr>
 
         </div>
-        <!-- <div>
+        <div>
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CHOOSE RATING ICON</div>
             <br>
             <mat-radio-group aria-label="Select an option" [(ngModel)]="ratingScaleIcon">
@@ -37,7 +64,7 @@
                 </mat-radio-button>
             </mat-radio-group>
             <hr>
-        </div> -->
+        </div>
 
         <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
             (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
@@ -45,69 +72,156 @@
         </button>
     </div>
 </div>
-<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+
+
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 
-<button class="add-column" matTooltip="Add column" matTooltipPosition="left" (click)="insertNewColumn()" mat-icon-button
-    aria-label="ranking">
-    <mat-icon>view_list</mat-icon>
-</button>
-<div class="odd-style" style="overflow-x: scroll;">
+
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="mat-elevation-z2"
+    style="display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 86%;
+    position: relative;
+    top: -15px;
+    left: 40px;
+    border-radius: 15px;">
+
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">columns width: {{columnsSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setColumnWidth(columnsSlider)"
+            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="columnsSlider">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">ratinale width: {{rationalewidth}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setRationalewidth(rationalewidth)"
+            [(ngModel)]="rationalewidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="rationalewidth">        
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">font size: {{fontSizeRow}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(fontSizeRow)"
+            [(ngModel)]="fontSizeRow" class="slider-font-size" tickInterval="1" min="2" max="40" [value]="fontSizeRow">
+    </div>
+     <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">row height: {{rowHeightSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;"
+            (change)="setSMALLTextLengthColumnHeight(rowHeightSlider)" [(ngModel)]="rowHeightSlider"
+            class="slider-font-size" tickInterval="1" min="2" max="20" [value]="rowHeightSlider">
+    </div>
+</div>
+<!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="columnsSlider"></mat-slider><p>{{columnsSlider}}</p> -->
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+
+
+<div class="scroller-style main-container">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
+
         <div class="test-name-table">
 
-            <div *ngFor="let columnName of columnsNames; let e =  index"
-                style="width: 50%;text-align: justify;margin:10px 10px;">
-                <div class="header-title" (mouseenter)="selectedColumn = e" (mouseleave)="selectedColumn = ''"
-                    *ngIf="(y == 0)">
-                    <span class="header-delete-icon" *ngIf="selectedColumn === e" matTooltip="delete column"
-                        matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
-                    <input class="header-title-box" *ngIf="(y == 0) && columnName != 'rationale'" [(ngModel)]="testName[columnName]"
-                        value="testName[columnName]">
-                        <textarea style="height: 100%;width: 300px; font-weight: bold;color: #324395;" class="row-box" *ngIf="(y == 0) && columnName == 'rationale'"
-                        [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
+                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+                 <div style="text-align: center;min-width: 250px;">
+                
+                    <div *ngIf="(y !== 0)">
+                        <!-- <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
+                            [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                            style="outline: none;margin:-5px -11px;" mat-icon-button aria-label="ranking">
+                            <p>{{star.icon}}</p>                       
+                        </button> -->
+                        <!-- <mat-form-field appearance="outline">
+                        <mat-label>Choose one</mat-label>
+                        <select [(ngModel)]="selectedRank" formControl="nativeSelectFormControl"
+                        (selectionChange)="setRating(selectedRank,y)">
+                            <option  *ngFor="let star of  testName.STARS; let x =  index" value="star.icon">{{star.icon}}</option>
+                          </select>
+                        </mat-form-field> -->
+    
+                        <mat-form-field appearance="outline">
+                            <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
+                            <select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE" (selectionChange)="setRating(selectedRank,y)">
+                                <option  *ngFor="let star of  testName.STARS; let x =  index" value="star.icon">{{star.icon}}</option>
+                            </select>
+                          </mat-form-field>
+    
+                    </div>
+                    <div class="rating-text"   *ngIf="(y === 0 )">RATING</div>
                 </div>
+                <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
-                <!-- 
-                <input  [ngClass]="(columnName == 'rationale')?'header-title-rationale-box ':'header-title-box'"  *ngIf="(y == 0)" [(ngModel)]="testName[columnName]"
-                value="testName[columnName]">
+            <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
+            [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'" >
+
+                <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
+                    (mouseleave)="selectedColumn = ''">
+
+                    <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
+                        matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
+
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode"                    
+                    [style.font-size]="fontSizeRow +'px'"
+                    style="text-align: center; font-weight: bold;color: #324395;"
+                        class="row-box" [(ngModel)]="testName[columnName]"
+                        value="testName[columnName]"></textarea>
+
+                        <!-- <textarea *ngIf=" bmxClientPageDesignMode " 
+                        [style.width]="rationalewidth + 'px'" 
+                            [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
+                            style="outline: none;text-align: center;" class="row-box"
+                            [(ngModel)]="testName[columnName]"></textarea>cev -->
+
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 HEADER PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"                     
+                    [style.font-size]="fontSizeRow +'px'"
+                        *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}</p>
+                </div>        
+
+                <div class="header-title">
+
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 ROW TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                <textarea *ngIf="y !== 0 && bmxClientPageDesignMode " 
+                [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'" 
+                    [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
+                    [cdkAutosizeMinRows]="rowHeightSlider"
+                    style="outline: none;text-align: center;" class="row-box"
+                    [(ngModel)]="testName[columnName]"></textarea>
+                <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                <p *ngIf="y !== 0 && !bmxClientPageDesignMode" [style.font-size]="fontSizeRow +'px'"
+                    
+                [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"  
+                style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
+            </div>
         </div>
-        <input   [ngClass]="(columnName == 'rationale')?'rationale-box':'row-box'" *ngIf="(y !== 0)" [(ngModel)]="testName[columnName]"
-            value="testName[columnName]"> -->
+       
 
-                <input class="row-box" *ngIf="(y !== 0) && columnName != 'rationale'" [(ngModel)]="testName[columnName]"
-                    value="testName[columnName]">
-
-                <textarea style="height: 24px;width: 300px;" class="row-box" *ngIf="(y !== 0) && columnName == 'rationale'"
-                    [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
-
-                    <!-- [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(star.id , y)" -->
-            </div>
-            <div style="min-width: 250px">
-                <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
-                    [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
-                    style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
-                    <p style="font-size: 25px;
-                    font-weight: 400;" *ngIf="(y !== 0)">{{star.icon}}</p>
-                    <!-- <mat-icon *ngIf="(y !== 0)" style="transform: rotate(0deg);">{{'crop_din'}}</mat-icon> -->
-                    <div class="rating-text" *ngIf="(y === 0 && x === 0)">RATING</div>
-                </button>
-            </div>
-            <div style="min-width: 100px">
+            <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
+            <!-- <div style="min-width: 100px">
                 <button *ngIf="(y !== 0)" style="outline: none;margin:-5px -8px;" (click)="deletRow(y)" mat-icon-button
+                    aria-label="ranking">
+                    <mat-icon>online_prediction</mat-icon>
+                </button>
+            </div> -->
+            <div style="min-width: 100px">
+                <button *ngIf="(y !== 0) && bmxClientPageOverview" style="outline: none;margin:-5px -8px;" (click)="deletRow(y)" mat-icon-button
                     aria-label="ranking">
                     <mat-icon>delete_outline</mat-icon>
                 </button>
             </div>
+             <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ END TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
         </div>
     </div>
-    <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = ''" mat-icon-button>
+    <!-- <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = ''" mat-icon-button>
         <mat-icon style="font-size: 25px;">cancel</mat-icon>
     </button>
     <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
         <mat-icon style="font-size: 25px;">edit</mat-icon>
-    </button>
+    </button> -->
 </div>
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑END RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
