--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -71,7 +71,7 @@
 .bmx-page {
     // width: 628%;
     height: 90.8vh;
-    width: 200vh;
+    width: 100vw;
     overflow-y: scroll;
     @include BoxShadow(2);
 }
