--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -1,3 +1,29 @@
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+<div *ngIf="bmxClientPageOverview">
+    <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
+        style=" margin: -20px 29px;" *ngIf="i === selectedIndex" mat-icon-button>
+        <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
+    </button>
+    <button (click)="selectedIndex = i" class="add-column" matTooltip="settings" matTooltipPosition="above"
+        style=" margin: -20px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
+        <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
+    </button>
+    <button (click)="insertNewColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="Add column"
+        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
+    </button>
+    <!-- <button (click)="insertNewColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="Add column"
+    matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <mat-icon style="font-size: 26px;" class="full-icon">next_plan</mat-icon>
+</button> -->
+    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 95px;" matTooltip="row settings"
+        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
+    </button>
+</div>
+<!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
+
+
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
     <div style="text-align: center;">
@@ -11,17 +37,59 @@
                 placeholder="ENHANCE,Hance, En-,EVOLVE,Evo,GUARD,Gard, Guard,INVEST,In, Inv,OMNI,Omni,OPTIMAL"></textarea>
         </mat-form-field>
     </div>
+
+    <div
+        style="display: flex;flex-direction:column; justify-content: space-evenly; align-items: center;border: grey dashed 3px; width: 300px; height: 200px;margin-left: 20px;">
+        <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
+            multiple accept="image/*">
+
+        <mat-icon style="color: #003180; font-size: 90px; margin-top: -20px; height: 10px;width: 90px;">
+            cloud_upload</mat-icon>
+        <br>
+        <br>
+
+        <h3 style="font-weight: 700;">Drag files to upload</h3>
+
+
+        <button mat-raised-button style="background-color: #003180;color:white;margin: -20px 20px 0 20px;"
+            (click)="fileUpload.click()">
+            Select files to upload
+        </button>
+
+
+
+
+    </div>
+    <div class="template-list" style="margin-top:20px;display: flex;flex-direction: row; height: 100vh;overflow-y: scroll;justify-content: flex-start;width: 100%;flex-wrap: wrap;text-align: center;">
+        <div *ngFor="let template of IMAGES_UPLOADED; let i = index">
+
+            <input type="text" [placeholder]="template.name">
+            <div [style.background-image]="'url(' + template.url + ')'" style="background-size: contain;"
+                [ngClass]="(isSelectedButton === i)?'template-list-selected':'template-list-item'"
+                (mouseenter)="isTemplateSelected = i" (mouseleave)="isTemplateSelected = ''">
+                <button (click)="isSelectedButton = i" *ngIf="isTemplateSelected === i && isSelectedButton !== i"
+                    mat-raised-button style="background-color: #76d354;color:white;margin: 0 20px 0 20px;">
+                    SELECT
+                </button>
+                <button *ngIf="isSelectedButton === i" mat-raised-button
+                    style="background-color: #01a6ff;color:white;margin: 0 20px 0 20px;">
+                    SELECTED
+                </button>
+            </div>
+        </div>
+    </div>
+
     <hr>
     <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
         <div>
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
             <br>
 
-            <div>
+            <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
                 5 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
                 10 <br>
-                <label for="volume">{{rankingScaleValue}}</label>
             </div>
+            <label for="volume">{{rankingScaleValue}}</label>
             <hr>
 
         </div>
@@ -32,8 +100,20 @@
                 <mat-icon style="color:#76d354;">grade</mat-icon>
                 <mat-radio-button value="grade">
                 </mat-radio-button>
-                <mat-icon style="color:#e6ad11;">settings_cell</mat-icon>
-                <mat-radio-button value="settings_cell">
+                <mat-icon style="color:#e6ad11;">book</mat-icon>
+                <mat-radio-button value="book">
+                </mat-radio-button>
+                <mat-icon style="color:#e6ad11;">panorama_vertical_select</mat-icon>
+                <mat-radio-button value="panorama_vertical_select">
+                </mat-radio-button>
+                <mat-icon style="color:#e6ad11;">battery_full </mat-icon>
+                <mat-radio-button value="battery_full   ">
+                </mat-radio-button>
+                <mat-icon style="color:#e6ad11;">minimize</mat-icon>
+                <mat-radio-button value="minimize">
+                </mat-radio-button>
+                <mat-icon style="color:#e6ad11;">maximize</mat-icon>
+                <mat-radio-button value="maximize">
                 </mat-radio-button>
             </mat-radio-group>
             <hr>
@@ -45,68 +125,142 @@
         </button>
     </div>
 </div>
-<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+<!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+
+
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 
-<button class="add-column" matTooltip="Add column" matTooltipPosition="left" (click)="insertNewColumn()" mat-icon-button
-    aria-label="ranking">
-    <mat-icon>view_list</mat-icon>
-</button>
-<div class="odd-style" style="overflow-x: scroll;">
+
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="mat-elevation-z2" style="display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 86%;
+    position: relative;
+    top: -15px;
+    left: 40px;
+    border-radius: 15px;">
+
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">columns width: {{columnsSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setColumnWidth(columnsSlider)"
+            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="columnsSlider">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">ratinale width: {{rationalewidth}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setRationalewidth(rationalewidth)"
+            [(ngModel)]="rationalewidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="rationalewidth">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">font size: {{fontSizeRow}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(fontSizeRow)"
+            [(ngModel)]="fontSizeRow" class="slider-font-size" tickInterval="1" min="2" max="40" [value]="fontSizeRow">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;">row height: {{rowHeightSlider}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;"
+            (change)="setSMALLTextLengthColumnHeight(rowHeightSlider)" [(ngModel)]="rowHeightSlider"
+            class="slider-font-size" tickInterval="1" min="2" max="20" [value]="rowHeightSlider">
+    </div>
+</div>
+<!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="columnsSlider"></mat-slider><p>{{columnsSlider}}</p> -->
+<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+
+
+<div class="scroller-style main-container">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
+
         <div class="test-name-table">
 
-            <div *ngFor="let columnName of columnsNames; let e =  index"
-                style="width: 50%;text-align: justify;margin:10px 10px;">
-                <div class="header-title" (mouseenter)="selectedColumn = e" (mouseleave)="selectedColumn = ''"
-                    *ngIf="(y == 0)">
-                    <span class="header-delete-icon" *ngIf="selectedColumn === e" matTooltip="delete column"
+            <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
+                [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'">
+
+                <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
+                    (mouseleave)="selectedColumn = ''">
+
+                    <span *ngIf="selectedColumn === e" class="header-delete-icon" matTooltip="delete column"
                         matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
-                    <input class="header-title-box" *ngIf="(y == 0) && columnName != 'rationale'"
-                        [(ngModel)]="testName[columnName]" value="testName[columnName]">
-                    <textarea style="height: 100%;width: 300px; font-weight: bold;color: #324395;" class="row-box"
-                        *ngIf="(y == 0) && columnName == 'rationale'" [(ngModel)]="testName[columnName]"
-                        value="testName[columnName]"></textarea>
+
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode" [style.font-size]="fontSizeRow +'px'"
+                        style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
+                        [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
+
+                    <!-- <textarea *ngIf=" bmxClientPageDesignMode " 
+                        [style.width]="rationalewidth + 'px'" 
+                            [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
+                            style="outline: none;text-align: center;" class="row-box"
+                            [(ngModel)]="testName[columnName]"></textarea>cev -->
+
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 HEADER PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
+                        [style.font-size]="fontSizeRow +'px'" *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}
+                    </p>
                 </div>
 
-                <img class="row-box" style="width: 300px;" [src]="testName[columnName]" *ngIf="(y !== 0) && columnName == 'name'">
+                <div class="header-title">
 
-                <input class="row-box" *ngIf="(y !== 0) && columnName != 'rationale' && columnName != 'name'" [(ngModel)]="testName[columnName]"
-                    value="testName[columnName]">
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 ROW TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                    <textarea *ngIf="y !== 0 && bmxClientPageDesignMode && columnName != 'name'"
+                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
+                        [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
+                        style="outline: none;text-align: center;" class="row-box"
+                        [(ngModel)]="testName[columnName]"></textarea>
 
-                <textarea style="height: 24px;width: 300px;" class="row-box"
-                    *ngIf="(y !== 0) && columnName == 'rationale'" [(ngModel)]="testName[columnName]"
-                    value="testName[columnName]"></textarea>
+                    <img class="row-box" style="width: 300px;" [src]="testName[columnName]"
+                        *ngIf="(y !== 0) && columnName == 'name'">
 
-
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 PARAGRAPH VIEW PAGE MODE 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <p *ngIf="y !== 0 && !bmxClientPageDesignMode && columnName != 'name'"
+                        [style.font-size]="fontSizeRow +'px'"
+                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
+                        style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
+                </div>
             </div>
+            <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+            <div style="text-align: center;min-width: 250px;">
 
-            <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-
-            <div style="min-width: 250px">
-                <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
-                    [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
-                    style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
-                    <mat-icon *ngIf="(y !== 0)">{{star.icon}}</mat-icon>
-                    <div class="rating-text" *ngIf="(y === 0 && x === 0)">RATING</div>
-                </button>
+                <div *ngIf="(y !== 0)">
+                    <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
+                        [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                        style="outline: none;margin:-5px -8px;" mat-icon-button aria-label="ranking">
+                        <mat-icon style="font-size: 30px;">{{star.icon}}</mat-icon>
+                        <span
+                            style="z-index: 999;color: white;position: absolute;left: 21px;font-size: 11px;top: 2px;">{{star.id
+                            + 1}}</span>
+                    </button>
+                </div>
+                <div class="rating-text" *ngIf="(y === 0 )">RATING</div>
             </div>
-                   <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-            <div style="min-width: 100px">
+            <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
+
+            <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
+            <!-- <div style="min-width: 100px">
                 <button *ngIf="(y !== 0)" style="outline: none;margin:-5px -8px;" (click)="deletRow(y)" mat-icon-button
                     aria-label="ranking">
+                    <mat-icon>online_prediction</mat-icon>
+                </button>
+            </div> -->
+            <div style="min-width: 100px">
+                <button *ngIf="(y !== 0) && bmxClientPageOverview" style="outline: none;margin:-5px -8px;"
+                    (click)="deletRow(y)" mat-icon-button aria-label="ranking">
                     <mat-icon>delete_outline</mat-icon>
                 </button>
             </div>
+            <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ END TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
         </div>
     </div>
-    <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = ''" mat-icon-button>
+    <!-- <button *ngIf="i === selectedIndex" class="cancel" (click)="selectedIndex = ''" mat-icon-button>
         <mat-icon style="font-size: 25px;">cancel</mat-icon>
     </button>
     <button *ngIf="i !== selectedIndex" mat-icon-button class="edit-icon" (click)="selectedIndex = i">
         <mat-icon style="font-size: 25px;">edit</mat-icon>
-    </button>
+    </button> -->
 </div>
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑END RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
