--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -19,7 +19,7 @@
 
 .rating-text {
   font-size: 17px;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
   text-align: center;
   font-weight: bold;
   color: #324395;
