disabling first row in progress

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -132,7 +132,7 @@ matTooltipPosition="above" mat-icon-button aria-label="ranking">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
       
         <div class="test-name-table" style="cursor: grab;">
-            <mat-icon *ngIf="(y !== 0)" >drag_indicator</mat-icon>
+            <mat-icon *ngIf="(y !== 0)" class="handle" >drag_indicator</mat-icon>
 
                  <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
                  <div style="text-align: center;min-width: 250px;">
