rating table layout color style done

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -100,7 +100,7 @@
 
 
             <!-- STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽-->
-            <div *ngIf="bmxItem.componentType === 'rate-scale'" class="paragraph mat-elevation-z2" style="margin-bottom: 30px;">
+            <div *ngIf="bmxItem.componentType === 'rate-scale'" class="paragraph " style="margin-bottom: 30px;">
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (click)="deleteComponent(i)"
