--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -38,7 +38,8 @@
 
 .pageNumberActive {
     min-width: 40px;
-    background-color: greenyellow;
+    color: white;
+    background-color: #ee7f24;
 }
 .pageNumber {
     min-width: 35px;
