--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,26 +1,26 @@
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview">
     <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
-        style=" margin: -20px 29px;" *ngIf="i === selectedIndex" mat-icon-button>
+        style=" margin: -50px 29px;" *ngIf="i === selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">cancel</mat-icon>
     </button>
     <button (click)="selectedIndex = i" class="add-column" matTooltip="settings" matTooltipPosition="above"
-        style=" margin: -20px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
+        style=" margin: -50px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
         <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
     </button>
-    <button (click)="insertTextColumn()" class="add-column" style=" margin: -20px 65px;" matTooltip="add Text column"
+    <button (click)="insertTextColumn()" class="add-column" style=" margin: -50px 65px;" matTooltip="add Text column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
     </button>
-    <button (click)="insertRadioColumn()" class="add-column" style="margin: -20px 95px;" matTooltip="add radio column"
+    <button (click)="insertRadioColumn()" class="add-column" style="margin: -50px 95px;" matTooltip="add radio column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
     </button>
-    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -20px 125px;" matTooltip="add Comments column"
+    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;" matTooltip="add Comments column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
-    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -20px 155px;" matTooltip="row settings"
+    <button (click)="toogleColumnResizer()" class="add-column" style="margin: -50px 155px;" matTooltip="row settings"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
     </button>
@@ -138,7 +138,8 @@
 
         <div class="test-name-table">
 
-            <div *ngFor="let columnName of columnsNames; let e =  index" style="text-align: center;margin:10px 10px;"
+            <div *ngFor="let columnName of columnsNames; let e =  index" style="display: flex;align-items: center;justify-content: center;" 
+            [ngClass]="(e%2==0)?'red':'blue'"
                 [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'">
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
@@ -172,7 +173,7 @@
 
 
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                <div class="header-title">
+                <div >
 
 
 
@@ -207,11 +208,11 @@
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
             </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-            <div style="text-align: end;min-width: 200px;">
+            <div style="min-width: 200px;background-color:white;display: flex;align-items: center;justify-content: center;">
                 <div *ngIf="(y !== 0)">
                     <div *ngIf="testName.CRITERIA; else elseBlock">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
-                        style="display: flex;flex-direction: row;justify-content: space-between;border-bottom: 1px solid grey;">
+                        style="display: flex;flex-direction: column;justify-content: space-between;border-bottom: 1px solid grey;">
                         <span [style.font-size]="fontSizeRow +'px'" style="margin-bottom: 5px;">{{criteria.name}}</span>
                         <div style="text-align: right;min-width: 200px;">
                             
@@ -226,12 +227,14 @@
                         </div>
                     </div>
                     <ng-template #elseBlock>
+                        <div style="    position: relative;
+                        top: -5px;">
                         <button *ngFor="let star of  testName.STARS; let x =  index"
                             (click)="setRating(star.id,y)" [ngClass]="star.class"
                             (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
                             style="outline: none;margin:-5px -11px;" mat-icon-button aria-label="ranking">
                             <mat-icon>{{star.icon}}</mat-icon>
-                        </button>
+                        </button></div>
                     </ng-template>
                 </div>
                 <div class="rating-text" *ngIf="(y === 0 )">RATING</div>
@@ -245,8 +248,8 @@
                     <mat-icon>online_prediction</mat-icon>
                 </button>
             </div> -->
-            <div style="min-width: 100px">
-                <button *ngIf="(y !== 0) && bmxClientPageOverview" style="outline: none;margin:-5px -8px;"
+            <div *ngIf="(y !== 0) && bmxClientPageOverview" style="min-width: 100px; position: absolute;right: 0px;">
+                <button  style="outline: none;margin:-5px -8px;"
                     (click)="deletRow(y)" mat-icon-button aria-label="ranking">
                     <mat-icon>delete_outline</mat-icon>
                 </button>
