--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
 }
 
 .header-delete-icon {
@@ -70,9 +71,16 @@
 }
 
 .test-name-table {
-  align-items: center;
+  // align-items: start;
 }
 
+.red{
+  background-color: whitesmoke;
+}
+
+.blue{
+  background-color: white;
+}
 
 .scroller-style::-webkit-scrollbar {
   width: 3px;
