rating table vertical lines style done

--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -217,8 +217,8 @@
         align-content: center;
     }
 
-    .test-name-table:nth-child(odd) {
-        border-bottom: grey solid 1px;
+    .test-name-table:last-child {
+        border-bottom: rgb(231, 230, 230) 1px solid;
     }
 
     .project-list::-webkit-scrollbar {
