--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -16,8 +16,8 @@
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
     </button>
-    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;" matTooltip="add Comments column"
-        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;"
+        matTooltip="add Comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
     <button (click)="toogleColumnResizer()" class="add-column" style="margin: -50px 155px;" matTooltip="row settings"
@@ -138,15 +138,17 @@
 
         <div class="test-name-table">
 
-            <div *ngFor="let columnName of columnsNames; let e =  index" style="display: flex;align-items: center;justify-content: center;" 
-            [ngClass]="(e%2==0)?'red':'blue'"
+            <div *ngFor="let columnName of columnsNames; let e =  index"
+                style="display: flex;align-items: center;justify-content: center;" 
+                [ngClass]="(e%2==0)?'red':'blue'"
                 [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'">
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
 
-                    <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon" matTooltip="delete column"
-                        matTooltipPosition="above" (click)="deleteColumn(testName[columnName])">x</span>
+                    <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
+                        matTooltip="delete column" matTooltipPosition="above"
+                        (click)="deleteColumn(testName[columnName])">x</span>
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
@@ -173,23 +175,22 @@
 
 
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                <div >
+                <div>
 
 
 
 
                     <!-- IF ELSE TEMPLATE INPUTS  -->
-                    <input *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true" type="radio"
-                            [name]="y" [value]="testName[columnName]" (change)="saveRadioColumValue(columnName, y)">
+                    <input *ngIf="y !== 0  &&  columnName.includes('Radio Column') == true" type="radio" [name]="y"
+                        [value]="testName[columnName]" (change)="saveRadioColumValue(columnName, y)">
 
-                 
+
                     <!-- TEXT_AREA COLUMN-->
-                    <textarea
-                    *ngIf="y !== 0  && columnName.includes('Comments') == true"
+                    <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
-                        style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;" class="row-box"
-                        [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
+                        style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;"
+                        class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
 
 
                     <textarea
@@ -199,8 +200,7 @@
                         style="outline: none;text-align: center;" class="row-box"
                         [(ngModel)]="testName[columnName]"></textarea>
 
-                    <p 
-                        *ngIf="y !== 0  && !bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
+                    <p *ngIf="y !== 0  && !bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
                         [style.font-size]="fontSizeRow +'px'"
                         [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
                         style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
@@ -208,33 +208,37 @@
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
             </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-            <div style="min-width: 200px;background-color:white;display: flex;align-items: center;justify-content: center;">
+            <div
+                style="min-width: 200px;background-color:white;display: flex;align-items: center;
+                justify-content: center;border-left: rgb(231, 230, 230) 1px solid;
+                border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;">
                 <div *ngIf="(y !== 0)">
                     <div *ngIf="testName.CRITERIA; else elseBlock">
-                    <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
-                        style="display: flex;flex-direction: column;justify-content: space-between;border-bottom: 1px solid grey;">
-                        <span [style.font-size]="fontSizeRow +'px'" style="margin-bottom: 5px;">{{criteria.name}}</span>
-                        <div style="text-align: right;min-width: 200px;">
-                            
+                        <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
+                            style="display: flex;flex-direction: column;justify-content: space-between;border-bottom: rgb(231, 230, 230) 1px solid;">
+                            <span [style.font-size]="fontSizeRow +'px'"
+                                style="margin-bottom: 5px;">{{criteria.name}}</span>
+                            <div style="text-align: right;min-width: 200px;">
 
-                                <button *ngFor="let star of  criteria.STARS;"
-                                (click)="setCriteriaRating(star.id,x,y)" [ngClass]="star.class"
-                                (mouseenter)="selectCriteriaStar(star.id,x,y)" (mouseleave)="leaveCriteriaStar(y,x)"
-                                    style="outline: none;margin:-5px -11px;" mat-icon-button aria-label="ranking">
+
+                                <button *ngFor="let star of  criteria.STARS;" (click)="setCriteriaRating(star.id,x,y)"
+                                    [ngClass]="star.class" (mouseenter)="selectCriteriaStar(star.id,x,y)"
+                                    (mouseleave)="leaveCriteriaStar(y,x)" style="outline: none;margin:-5px -11px;"
+                                    mat-icon-button aria-label="ranking">
                                     <mat-icon>{{star.icon}}</mat-icon>
                                 </button>
                             </div>
                         </div>
                     </div>
                     <ng-template #elseBlock>
-                        <div style="    position: relative;
-                        top: -5px;">
-                        <button *ngFor="let star of  testName.STARS; let x =  index"
-                            (click)="setRating(star.id,y)" [ngClass]="star.class"
-                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
-                            style="outline: none;margin:-5px -11px;" mat-icon-button aria-label="ranking">
-                            <mat-icon>{{star.icon}}</mat-icon>
-                        </button></div>
+                        <div style="position: relative;top: -5px;">
+                            <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)"
+                                [ngClass]="star.class" (mouseenter)="selectStar(star.id , y)"
+                                (mouseleave)="leaveStar(y)" style="outline: none;margin:-5px -11px;" mat-icon-button
+                                aria-label="ranking">
+                                <mat-icon>{{star.icon}}</mat-icon>
+                            </button>
+                        </div>
                     </ng-template>
                 </div>
                 <div class="rating-text" *ngIf="(y === 0 )">RATING</div>
@@ -249,8 +253,8 @@
                 </button>
             </div> -->
             <div *ngIf="(y !== 0) && bmxClientPageOverview" style="min-width: 100px; position: absolute;right: 0px;">
-                <button  style="outline: none;margin:-5px -8px;"
-                    (click)="deletRow(y)" mat-icon-button aria-label="ranking">
+                <button style="outline: none;margin:-5px -8px;" (click)="deletRow(y)" mat-icon-button
+                    aria-label="ranking">
                     <mat-icon>delete_outline</mat-icon>
                 </button>
             </div>
