--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -8,6 +8,24 @@
   color: grey;
 }
 
+
+.red{
+  background-color: white;
+  border-left: rgb(231, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+  padding: 20px;
+  // margin: 5px;
+}
+
+.blue{
+  background-color: white;
+  border-left: rgb(230, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+  padding: 20px;
+  // margin: 5px;
+}
+
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -74,13 +92,6 @@
   // align-items: start;
 }
 
-.red{
-  background-color: whitesmoke;
-}
-
-.blue{
-  background-color: white;
-}
 
 .scroller-style::-webkit-scrollbar {
   width: 3px;
@@ -129,7 +140,7 @@ input[type="range"]::-webkit-slider-runnable-track {
   height: 8.4px;
   cursor: pointer;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #b0ec0a;
+  background: #ef7f25;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
@@ -145,14 +156,14 @@ input[type="range"]::-webkit-slider-thumb {
   margin-top: -5px;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #b0ec0a;
+  background: #ef7f25;
 }
 input[type="range"]::-moz-range-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #b0ec0a;
+  background: #ef7f25;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
@@ -181,7 +192,7 @@ input[type="range"]::-ms-fill-lower {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 input[type="range"]::-ms-fill-upper {
-  background: #b0ec0a;
+  background: #ef7f25;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
@@ -196,8 +207,8 @@ input[type="range"]::-ms-thumb {
   cursor: pointer;
 }
 input[type="range"]:focus::-ms-fill-lower {
-  background: #b0ec0a;
+  background: #ef7f25;
 }
 input[type="range"]:focus::-ms-fill-upper {
-  background: #b0ec0a;
+  background: #ef7f25;
 }
